ansible/ressources/k8s/gitea/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-gitea
  namespace: gitea
spec:
  parentRefs:
  - name: kong
    kind: Gateway
    namespace: default
    sectionName: global-https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /gitea
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: gitea-http
      kind: Service
      port: 3000
      namespace: gitea
